fix alignment

--- a/style.css
+++ b/style.css
@@ -134,3 +134,7 @@
 text{
   font-size: .625rem;
 }
+.sps-seek-button{
+  display:flex !important;
+  align-items:center;
+}
